:sparkles: enabled cors

--- a/Apps/Front/index.html
+++ b/Apps/Front/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/MLB/src/assets/icon/mlb-logo.tsx" />
+    <link rel="icon" type="image/svg+xml" href="/MLB/Apps/Front/src/assets/icon/Major_League_Baseball_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MBL</title>
+    <title>MLB</title>
   </head>
   <body>
     <div id="root"></div>
